# AUV

./: .gitignore  99-usb-serial.rules  README.md  activate_sensors.sh  build.sh  compile.sh  deactivate_sensors.sh  exec.sh  kill_docker.sh  mros.sh  requirements.txt  run.sh  sonarview.sh  upload.sh
.devcontainer/: Dockerfile  Dockerfile_esp32  Dockerfile_esp32_zedless  Dockerfile_portenta  Dockerfile_portenta_zedless  Dockerfile_sauvc  Dockerfile_timi  Dockerfile_zedless  cyclonedds.xml  devcontainer.json  docker-compose.yml
Sonarview/: docker-compose.yml
arduino/microros_test_codes/: test1.ino  test2.ino
arduino/sauvc/: micro_ros_test.ino
code_ws/src/: dvl_msgs  sbg_ros2_driver
code_ws/src/arduino_ps/: package.xml  setup.cfg  setup.py
code_ws/src/arduino_ps/arduino_ps/: arduino_ps.py
code_ws/src/auv_2d_control/: package.xml  setup.cfg  setup.py
code_ws/src/auv_2d_control/auv_2d_control/: heading_speed_controller.py  thruster_allocator_2d.py
code_ws/src/auv_2d_control/config/: control_2d_default.yaml
code_ws/src/auv_2d_missions/: package.xml  setup.cfg  setup.py
code_ws/src/auv_3d_control/: package.xml  setup.cfg  setup.py
code_ws/src/auv_3d_missions/: package.xml  setup.cfg  setup.py
code_ws/src/auv_control/: setup.py
code_ws/src/auv_navigation/: package.xml  setup.py
code_ws/src/auv_navigation/auv_navigation/: __init__.py  dtheta_ns.py  ekf.py  geofence.py  kin_kf.py  navigation_node.py  static_obstacle.py
code_ws/src/auv_navigation/config/: vessel_data.example.yml
code_ws/src/auv_navigation/navigation/: __init__.py  navigation_node.py  read_config.py
code_ws/src/auv_navigation/resource/: auv_navigation
code_ws/src/install/: local_setup.sh  setup.sh
code_ws/src/log/: latest_build
code_ws/src/navigation/: package.xml
gui/: .gitignore  README.md
gui/backend/: .env
gui/backend/src/: config.ts  index.ts
gui/frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
kf_tests/: test_ekf.py
kf_tests/ekf_offline_test/: README.md  test_ekf.py
kf_tests/ekf_offline_test/run1_result/: summary.txt
kf_tests/ekf_offline_test/run3_result/: summary.txt
kf_tests/ekf_offline_test/run5_result/: summary.txt
kf_tests/rosbag_play_test/: README.md  nav_from_bag_pipeline.py
kf_tests/rosbag_play_test/run1_result/: metadata.yaml  run1_result_0.db3  summary.txt
kf_tests/rosbag_play_test/run3_result/: metadata.yaml  run3_result_0.db3  summary.txt
kf_tests/rosbag_play_test/run5_result/: metadata.yaml  summary.txt
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
run1/: metadata.yaml  run1_0.db3
system_setups/: jetson_auv_setup.md  jetson_setup.md
(+31 files in other folders)
