<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auv_navigation</name>
  <version>0.1.0</version>
  <description>
    AUV kinematic navigation (EKF): packages/sbg_ros2_driver Imu (imu/data), arduino_ps Float32 depth m (/auv/depth),
    packages/dvl-a50 (dvl_msgs/DVL on /dvl/data,
    optional DVLDR on /dvl/position). Optional sensor_msgs/Range bottom altimeter (e.g. Ping on /ping1d/range) with
    constant seabed_z_ned in vessel YAML. No custom actuator messages; optional thruster feedback via sensor_msgs/JointState.
    Package source: code_ws/src/auv_navigation/. Colcon workspace must include dvl_msgs (e.g. packages/dvl_msgs).
  </description>
  <maintainer email="na22b018@smail.iitm.ac.in">aatmaj</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>dvl_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>
  <depend>python3-yaml</depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
